<resources>
    <string name="mapbox_access_token">
        pk.eyJ1IjoieWVsbnVyMDUiLCJhIjoiY2pvODlkcHZnMDN3NDNrcGdwbGQ4b2l2ZSJ9.Yz2I6Gw6ypt6YjCqV0VqDg
    </string>
    <string name="default_notification_channel_id">tazalyk_partners_my_channel_id</string>
    <string name="fileprovider_authorities">kz.nextstep.app.fileprovider</string>
    <string name="app_name">Tazalyk Partners</string>
    <string name="signIn">Войти</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="email">Email</string>
    <string name="correct_login_email">Введите корректный e-mail</string>
    <string name="wrongLoginOrPassword">Неверный логин или пароль</string>
    <string name="enter_login_email">Напишите email</string>
    <string name="login_send">Отправить</string>
    <string name="login_cancel">Отмена</string>
    <string name="nav_user_interactivity">Активность</string>
    <string name="nav_pin_list">Пункты приема</string>
    <string name="nav_statistics">Статистика</string>
    <string name="nav_profile">Профиль</string>
    <string name="nav_edit_profile">Редактировать профиль</string>
    <string name="nav_sign_out">Выход</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ask_sign_out">Вы хотите выйти из аккаунта?</string>
    <string name="yet_no_comment">Пока нет отзывов</string>
    <string name="detailed_info">Подробно</string>
    <string name="bonus_accrual">Начисление бонусов</string>
    <string name="schedule">График работы:</string>
    <string name="pin_taking">Принимают:</string>
    <string name="pin_note">Примечание:</string>
    <string name="comments">Отзывы</string>
    <string name="recycle">переработка</string>
    <string name="utilization">утилизация</string>
    <string name="blago">благо</string>
    <string name="for_week">За неделю</string>
    <string name="for_month">За месяц</string>
    <string name="for__three_month">За три месяца</string>
    <string name="for_half_year">За полгода</string>
    <string name="for_year">За 1 год</string>
    <string name="filter">Фильтр</string>
    <string name="apply">Применить</string>
    <string name="change_email">Изменить E-mail</string>
    <string name="change_password">Изменить пароль</string>
    <string name="change_profile_photo">Сменить фото</string>
    <string name="enter_full_name">Введите полное имя</string>
    <string name="save">Сохранить</string>
    <string name="success_change_data">Данные успешно изменены</string>
    <string name="permission_denied_message">Разрешение отказано, вы не можете получить доступ к камере, фото и видео
    </string>
    <string name="give_both_permissions">Вам нужно разрешить доступ к обоим разрешениям</string>
    <string name="error_change_data">Данные не изменены! Что-то пошло не так</string>
    <string name="current_password">Текущий пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="confirm_new_password">Повторите пароль</string>
    <string name="enter_new_email">Введите новый email</string>
    <string name="passwords_not_match">Пароли не совпадают</string>
    <string name="success_change_password">Пароль успешно изменен</string>
    <string name="passwords_less_than_six_characters">Пароль не должен быть менее 6 символов</string>
    <string name="success_change_email">Email успешно изменен. Подтвердите вашу почту нажав ссылку в сообщении который
        мы отправили
    </string>
    <string name="clear">Понятно</string>
    <string-array name="waste_id">
        <item>recycle,макулатура,all,paper,paper_detailed_info</item>
        <item>recycle,картон,all,cardboard,cardboard_detailed_info</item>
        <item>recycle,стекло,all,glass,glass_detailed_info</item>
        <item>recycle,пластик,PET.HDPE.PVC.LDPE.PP.PS.OTHER.,plastic,plastic_detailed_info</item>
        <item>recycle,алюминий,all,aluminium,aluminium_detailed_info</item>
        <item>recycle,тетра Пак,all,tetrapak,tetrapak_detailed_info</item>
        <item>recycle,текстиль,all,textile,textile_detailed_info</item>
        <item>recycle,электроника,all,electronic,electronics_detailed_info</item>
        <item>recycle,железо,all,metal,metall_detailed_info</item>
        <item>recycle,шины,all,tires,tires_detailed_info</item>
        <item>recycle,другое,all,another,another_detailed_info</item>

        <item>utilization,макулатура,all,paper,utilization_paper_detailed_info</item>
        <item>utilization,электроника,all,electronic,utilization_electronics_detailed_info</item>
        <item>utilization,аккумуляторы,all,accumulator,accumulator_detailed_info</item>
        <item>utilization,батарейки,all,battery,battery_detailed_info</item>
        <item>utilization,лампочки,all,bulb,bulb_detailed_info</item>
        <item>utilization,ртутьсодержащие отходы,all,mercury_containing_waste,mercury_containing_waste_detailed_info
        </item>
        <item>utilization,авто,all,auto,auto_detailed_info</item>
        <item>utilization,медицинское,all,med,medical_detailed_info</item>
        <item>utilization,пищевые отходы,all,food_waste,food_waste_detailed_info</item>

        <item>blago,одежда,all,clothes,clothes_detailed_info</item>
        <item>blago,продукты,all,product,products_detailed_info</item>
        <item>blago,игрушки,all,toys,toys_detailed_info</item>
        <item>blago,книги,all,books,books_detailed_info</item>
        <item>blago,электроника,all,electronic,blago_electronics_detailed_info</item>
        <item>blago,мебель,all,furniture,furniture_detailed_info</item>
        <item>blago,другое,all,another,blago_another_detailed_info</item>
    </string-array>
    <string name="plastic_detailed_info">ПЭТ (полиэтилентерефталат) - прозрачные пластиковые бутылки из под воды или
        газированных напитков."\n\n"ПЭ (полиэтилен) - это целлофановые пакеты, упаковочная пленка, мусорные мешки и
        прочая упаковачная тара.
        "\n\n"Важно: смотреть на маркировку PET (1), HDPE (2), LDPE (4)
    </string>
    <string name="paper_detailed_info">Макулатура - это отходы бумажной продукции, бывшие в
        употреблении."\n\n"Подлежат:"\n"• бумага, тетради, книги"\n"• журналы, газеты, альбомы"\n"• листовки"\n"•
        измельчённая бумага (принимается в пакетах или коробках)"\n\n"Не подлежат:"\n"• салфетки, бумажные
        полотенца"\n"• обертки от сигарет"\n"• туалетная бумага"\n"• стаканчики от кофе"\n"• чеки, жирная/масляная
        бумага"\n"• бумага: ламинированная пленкой, пергаментная, термо-копировальная, фольгированная, для выпечки"\n"•
        обои"
    </string>
    <string name="utilization_paper_detailed_info">Утилизация и уничтожение макулатуры и архивных документов, путем
        пропуска через шредер или сжигания."\n\n"Подлежат:"\n"• бухгалтерские бланки"\n"• договора"\n"• всевозможные
        акты"\n"• деловая переписка и ряд прочих документов
    </string>
    <string name="charity_detailed_info">Вещи, которые могут пригодится нуждающимся. Это может быть непорванная чистая
        одежда, бытовая электроника, старые телефоны, книги, посуда и т.д.
    </string>
    <string name="aluminium_detailed_info">Подлежат:"\n"• алюминивые банки из под напитков"\n"• фольга"\n\n"Как
        подготовить?"\n"• содержимое вылить до конца"\n"• сожмите или компактно сложите"\n"• фольгу сминайте отдельно в
        шарик
    </string>
    <string name="battery_detailed_info">Подлежат:"\n"• батарейки от пульта, плеера, смартфона и т.д."\n\n"Важно: "\n"•
        не выбрасывать в общую урну с другими отходами"\n"• одна пальчиковая батарейка загрязняет тяжелыми металлами
        около 20 кв.м. почвы. В лесной зоне это территория обитания двух деревьев, двух кротов, одного ежика и
        нескольких тысяч дождевых червей.
    </string>
    <string name="bulb_detailed_info">Подлежат:"\n"• люминесцентные лампы"\n"• энергосберегающие лампы"\n"• кварцевые
        лампы"\n\n"Важно: не выбрасывать в общую урну с другими отходами
    </string>
    <string name="plastic_container_detailed_info">Полиэтилен низкого давления (маркировка 2 или HDPE) - крышки,
        мусорные ведра, упаковки от шампуня, моющих средств и т.д."\n\n"Полиэтилен высокого давления (маркировка 4 или
        LDPE) - полиэтиленовые пакеты, мусорные мешки, бутылки от моющих средств и т.д.
        "\n\n"Полипропилен (маркировка 5 или PP) - одноразовые контейнеры, стаканчики, игрушки и т.д."\n\n"Важно:
        проверяйте маркировку пластика и приносите чистым
    </string>
    <string name="glass_detailed_info">Подлежат:"\n"• бутылки"\n"• банки"\n"• пузырьки, флаконы"\n\n"Не подлежат:"\n"•
        автомобильное, оконное, оптическое"\n"• лампочки"\n"• керамика, посуда"\n"• разбитая тара
    </string>
    <string name="medical_detailed_info">Любые медицинские отходы"\n\n"Например:"\n"• таблетки"\n"• суспензии и
        сиропы"\n"• флаконы с растворами для инъекции"\n"• шприцы, скальпели"\n\n"Важно: не выбрасывать в общую урну с
        другими отходами.
    </string>
    <string name="textile_detailed_info">Подлежат:"\n"• постельное белье"\n"• полотенца, пледы"\n"• шторы,
        покрывала"\n"• другой домашний текстиль"\n\n"Не подлежат:"\n"• порванное, испачканное"\n\n"Важно"\n"• приносить
        чистым и сухим"\n"• предварительно уточните какой вид текстиля принимает данный пункт приема
    </string>
    <string name="electronics_detailed_info">Подлежат:"\n"• телефоны, планшет, ноутбуки"\n"• провода, наушники"\n"•
        пылесосы, фены, утюги, чайники"\n"• мышки, системные блоки, мониторы"\n"• принтеры, сканеры"\n\n"Не
        подлежат:"\n"• резиновые и ПВХ шланги"\n"• любые лампочки"\n"• кондиционеры
    </string>
    <string name="blago_electronics_detailed_info">Ваш товар будет передан людям из уязвленных слоев
        населения"\n\n"Подлежат:"\n"• телефоны, планшет, ноутбуки"\n"• провода, наушники"\n"• пылесосы, фены, утюги,
        чайники"\n"• мышки, системные блоки, мониторы"\n"• принтеры, сканеры"\n\n"Важно:"\n"• рабочая техника
    </string>
    <string name="utilization_electronics_detailed_info">Утилизация оргтехники и электронной техники"\n\n"Все элементы
        утилизируемого оборудования, которые не могут быть использованы повторно, уничтожаются."\n\n"Подлежат:"\n"•
        телефоны, планшет, ноутбуки"\n"• провода, наушники"\n"• пылесосы, фены, утюги, чайники"\n"• мышки, системные
        блоки, мониторы"\n"• принтеры, сканеры
    </string>
    <string name="metall_detailed_info">Подлежат:"\n"• консервные банки"\n"• металлические крышки"\n"• сковородки,
        кастрюли"\n"• баллончики проколотые"\n\n"Не подлежат:"\n"• непроколотые баллончики"\n"• пластиковая упаковка с
        металлизированным (серебристым) слоем внутри"\n\n"Важно"\n"• сполосните и сожмите"\n"• баллончики
        обязательно"\n"проколите и сплющите"\n"• вторсырьё должно быть ЧИСТЫМ от пищевых отходов
    </string>
    <string name="cardboard_detailed_info">Подлежат:"\n\n"• гофр картон"\n"• картонные упаковки"\n"• упаковки из под яиц
        и аналогичные упаковки"\n\n"Как подготовить?"\n"• коробки сделайте плоскими, компактно сложите"\n"• удалите
        лишнее (скотч, проволки и т.д.)
    </string>
    <string name="logo_and_photo">Лого и фото</string>
    <string name="location">Местоположения</string>
    <string name="work_time">Время работы</string>
    <string name="name">Имя</string>
    <string name="admin_name">Имя админа</string>
    <string name="waste_type">Тип отходов</string>
    <string name="notice">Примечание</string>
    <string name="qr_code">QR код</string>
    <string name="verification_qr_code">QR код верификации</string>
</resources>