<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_user_interactivity"
                android:title="@string/nav_user_interactivity"
        />
        <item
                android:id="@+id/nav_pin_list"
                android:title="@string/nav_pin_list"
        />
        <item
                android:id="@+id/nav_statistics"
                android:title="@string/nav_statistics"
        />
        <item
                android:id="@+id/nav_edit_profile"
                android:title="@string/nav_edit_profile"
        />
        <item
                android:id="@+id/nav_sign_out"
                android:title="@string/nav_sign_out"
        />
    </group>
</menu>