<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/standard_22"
        tools:context=".ui.editProfile.ChangeEmailFragment">

    <EditText
            android:id="@+id/edt_change_user_email_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_new_email"/>

    <EditText
            android:id="@+id/edt_change_user_email_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_22"
            android:inputType="textPassword"
            android:hint="@string/current_password"/>

    <Button
            android:id="@+id/btn_change_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/rounded_corner_active_button"
            android:layout_marginTop="@dimen/standard_22"/>

</LinearLayout>